<resources>
    <string name="app_name">CashRegisterApp_Assignment2_JeyakumariRamji</string>
    <string name="title1">Assignment 2</string>
    <string name="cash_register">Cash Register</string>
    <string name="product_textview">Product Type</string>
    <string name="buy">BUY</string>
    <string name="clear">Clear</string>
    <string name="manager">Manager</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="quantity">Quantity</string>
    <string name="history">History</string>
    <string name="restock">Restock</string>

    <string name="_3">3</string>
    <string name="add">+</string>

    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="advance_with_history">Advance - with history</string>
    <string name="standard_no_history">STANDARD - NO HISTORY</string>
    <string name="product_type">Product Type</string>
    <string name="total">Total</string>

    <string name="product">Product: </string>
    <string name="price">Price: </string>
    <string name="purchase_date">Purchase Date: </string>
    <string name="enter_new_quantity">Enter New Quantity</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="total_tv">total_tv</string>
    <string name="quantity_tv">quantity_tv</string>
    <string name="back_arrow">backArrowButton</string>
    <string name="type">productType</string>
    <string name="pants">history_type</string>
</resources>