<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <!-- Product Type -->
    <TextView
        android:id="@+id/productType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/type"
        android:textSize="16sp" />

    <!-- Product Price -->
    <TextView
        android:id="@+id/productPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/price"
        android:textSize="16sp"
        android:gravity="end" />

    <!-- Product Quantity -->
    <TextView
        android:id="@+id/productQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/quantity"
        android:textSize="16sp"
        android:gravity="end" />
</LinearLayout>