<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF1DE9B6"
        android:gravity="center"
        android:padding="16dp"
        android:text="Assignment 2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/quantity_tv"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_tv">
        <TableRow>
            <Button
                android:id="@+id/one"
                android:text="@string/one"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                />
            <Button
                android:id="@+id/two"
                android:text="@string/two"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/three"
                android:text="@string/three"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/four"
                android:text="@string/four"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/five"
                android:text="@string/five"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/six"
                android:text="@string/six"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/seven"
                android:text="@string/seven"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/eight"
                android:text="@string/eight"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/nine"
                android:text="@string/nine"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/clear_but"
                android:text="@string/clear"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/zero"
                android:text="@string/zero"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/teal_400"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>
    <TextView
        android:id="@+id/product_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/product_textview"
        android:text=""
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guidelineH1"
        app:layout_constraintEnd_toStartOf="@+id/buttonManager"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />
    <Button
        android:id="@+id/buttonManager"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/teal_400"
        android:padding="5dp"
        android:text="@string/manager"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />
    <TextView
        android:id="@+id/total_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/total_tv"
        android:padding="6dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineH1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="@+id/guidelineH1"
        app:layout_constraintTop_toBottomOf="@+id/product_textview"
        app:layout_constraintVertical_bias="0.0" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />
    <Button
        android:id="@+id/buyButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/teal_400"
        android:text="@string/buy"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/total_tv"
        tools:ignore="NestedWeights" />
    <TextView
        android:id="@+id/quantity_tv"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:hint="@string/quantity_tv"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/guidelineV1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="MissingConstraints" />
    <ListView
        android:id="@+id/listview_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>