<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailHistoryActivity">
    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF1DE9B6"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/title1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Back Arrow Button -->
    <ImageButton
        android:id="@+id/backArrowButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/headerTextView"
        android:padding="8dp" />


    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="133dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/myType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_button_margin"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/product"
            android:textSize="@dimen/common_button_text_size" />

        <TextView
            android:id="@+id/myPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_button_margin"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/price"
            android:textSize="@dimen/common_button_text_size" />

        <TextView
            android:id="@+id/myDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_button_margin"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/purchase_date"
            android:textSize="@dimen/common_button_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>