<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestockActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:background="#FF1DE9B6"
        android:gravity="center"
        android:padding="16dp"
        android:text="Assignment 2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backArrowButton"
        android:layout_width="73dp"
        android:layout_height="57dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_arrow"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:hint="@string/enter_new_quantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColor="#000000"
    android:autofillHints="enterNewQuantity"
    app:layout_constraintBottom_toTopOf="@id/buttonLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/headerTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextQuantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!-- Define any buttons you need here -->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/productListView"
        android:layout_width="399dp"
        android:layout_height="489dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okButtonR"
        app:layout_constraintVertical_bias="0.5" /> <!-- Adjusted bias -->

    <Button
        android:id="@+id/okButtonR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity" />

    <Button
        android:id="@+id/cancelButtonR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuantity" />

</androidx.constraintlayout.widget.ConstraintLayout>